cmake_minimum_required(VERSION 3.5)
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
include_directories(${PROJECT_SOURCE_DIR}/include ${Boost_INCLUDE_DIRS})
file(GLOB TEST_SRCS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(testSrc ${TEST_SRCS})
	get_filename_component(testName ${testSrc} NAME_WE)
	add_executable(${testName} ${testSrc})
	target_link_libraries(${testName} ${Boost_LIBRARIES} ${PROJECT_NAME}_lib)
	add_test(NAME ${testName} COMMAND ${testName})
endforeach(testSrc)
